tests/binary/errors/pack_u32_negative.dby
import std.binary as bin

print(bin.pack_u32_be(-100))
